# confidant

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  REUSE.toml  THANKS.md  cliff.toml  flake.nix  justfile  meson.build  meson.options  mkdocs.yml
doc/man/: confidant.1.scd.in  confidant.ucl.5.scd.in  meson.build
doc/site/: index.md  install.md
doc/site/licensing/: index.md
doc/site/user-manual/: commands.md  configuration.md
doc/site/user-manual/configuration/: global.md  local.md
example/: confidant.ucl  foo.ucl  minimal.ucl  testing.ucl
i18n/: gettext.post-install  meson.build
i18n/po/: de_DE.po  es_AR.po  es_MX.po  fr_FR.po  ja_JP.po  ko_KR.po  pl_PL.po  pt_BR.po  ru_RU.po  zh_CN.po
include/: ansi.hpp  confidant.hpp  help.hpp  logging.hpp  msg.hpp  options.hpp  settings.hpp  ucl.hpp  util.hpp  xdg.hpp
include/actions/: dump.hpp  get.hpp  link.hpp
include/settings/: global.hpp  local.hpp
misc/completions/: README.md  confidant.usage  meson.build
misc/completions/bash/: confidant.bash
misc/completions/fish/: confidant.fish
misc/completions/zsh/: _confidant
misc/demo/: demo.tape
misc/example/: condition.ucl  foo.ucl  testing.ucl
misc/packaging/arch-linux/: PKGBUILD
misc/scripts/: clang.fish  clang.sh  i18n.sh  mostly-static.sh  release-materials.sh
src/: ansi.hpp  confidant.cpp  fmt.cpp  fmt.hpp  help.cpp  help.hpp  i18n.hpp  logging.cpp  main.cpp  msg.hpp  options.hpp  parse.cpp  parse.hpp  settings.cpp  ucl.cpp  util.cpp  util.hpp  xdg.cpp  xdg.hpp
src/actions/: dump.cpp  dump.hpp  get.cpp  get.hpp  link.cpp  link.hpp
src/settings/: global.cpp  global.hpp  local.cpp  local.hpp
subprojects/: cli11.wrap  libucl.wrap  lyra.wrap
subprojects/packagefiles/libucl/: meson.build
subprojects/packagefiles/lyra/: meson.build
test/: config-createdirs.cpp  config-links.cpp  config-serialize-global.cpp  config-serialize-local.cpp  meson.build
test/aux/: check-phony-links.sh  remove-phony-links.sh
test/aux/t/config-createdirs/: global.ucl  local.ucl
test/aux/t/config-links/: sample.ucl
test/aux/t/config-serialize-global/: global.ucl
test/aux/t/config-serialize-local/: global.ucl  local.ucl
