# SPDX-FileCopyrightText: 2025 Will Reed <wreed@disroot.org>
# 
# SPDX-License-Identifier: GPL-3.0-or-later

option('static-stdlib',
       type: 'boolean',
       value: false,
       description: 'link the c++ standard library statically')

option('use-libcxx',
       type: 'boolean',
       value: false,
       description: 'link with libc++ instead of libstdc++')

option('shell-completions',
       type: 'array',
       choices: ['bash', 'fish', 'zsh'],
       value: ['bash', 'fish', 'zsh'],
       description: 'install shell completions for the given shell(s)')

option('build-tests',
       type: 'boolean',
       value: false,
       description: 'build tests for confidant')