# Use, modification, and distribution are
# subject to the Boost Software License, Version 1.0. (See accompanying
# file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)

# Copyright 2019 Rémi Gastaldi.
# Copyright René Ferdinand Rivera Morell.

project('Lyra','cpp',
	version: '1.7.0',
	license: 'BSL-1.0',
	default_options: [
        'cpp_std=c++11',
        'cpp_eh=none',
        'b_lto=true',
        'warning_level=2'
    ])

lyra_dep = declare_dependency(include_directories: 'include')